--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-image": "^4.1.0",
     "react-intersection-observer": "^9.16.0",
     "react-modal-video": "^2.0.2",
