--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
     "aos": "^2.3.4",
     "apexcharts": "^3.44.2",
+    "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "postcss-cli": "^10.1.0",
     "postcss-prefix-selector": "^2.1.0",
