--- a/package.json
+++ b/package.json
@@ -10,15 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.6.1",
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
     "aos": "^2.3.4",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
-    "postcss-cli": "^10.1.0",
-    "postcss-prefix-selector": "^2.1.0",
-    "preline": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
@@ -27,15 +21,10 @@
     "react-modal-video": "^2.0.2",
     "react-odometerjs": "^3.1.3",
     "react-perfect-scrollbar": "^1.5.8",
-    "react-redux": "^9.2.0",
     "react-router": "^7.3.0",
     "reducers": "^3.0.0-alpha",
-    "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2",
     "simplebar-react": "^3.3.0",
-    "swiper": "^11.2.5",
-    "tailwind": "^2.3.1",
-    "tailwind-clip-path": "^1.0.0"
+    "swiper": "^11.2.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
