--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-odometerjs": "^3.1.3",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router": "^7.3.0",
+    "react-spinners": "^0.15.0",
     "reducers": "^3.0.0-alpha",
     "simplebar-react": "^3.3.0",
     "swiper": "^11.2.5"
