--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@reduxjs/toolkit": "^2.6.1",
     "aos": "^2.3.4",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
@@ -24,6 +25,7 @@
     "react-modal-video": "^2.0.2",
     "react-odometerjs": "^3.1.3",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-redux": "^9.2.0",
     "react-router": "^7.4.0",
     "react-spinners": "^0.15.0",
     "reducers": "^3.0.0-alpha",
