--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "framer-motion": "^12.6.2",
+    "i18next": "^24.2.3",
+    "i18next-browser-languagedetector": "^8.0.4",
     "lottie-react": "^2.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-image": "^4.1.0",
     "react-intersection-observer": "^9.16.0",
