--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "i18next-http-backend": "^3.0.2",
     "lottie-react": "^2.4.1",
     "react": "^18.2.0",
+    "react-awesome-stars-rating": "^0.16.2",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-image": "^4.1.0",
