--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aos": "^2.3.4",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
+    "firebase": "^11.7.1",
     "framer-motion": "^12.6.2",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
@@ -33,6 +34,7 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^9.2.0",
     "react-router": "^7.4.0",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "react-spinners": "^0.15.0",
     "reducers": "^3.0.0-alpha",
     "simplebar-react": "^3.3.0",
