--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^9.2.0",
     "react-router": "^7.4.0",
+    "react-select": "^5.10.1",
     "react-signature-canvas": "^1.1.0-alpha.2",
     "react-spinners": "^0.15.0",
     "reducers": "^3.0.0-alpha",
