--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aos": "^2.3.4",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "firebase": "^11.7.1",
     "framer-motion": "^12.6.2",
     "i18next": "^24.2.3",
