--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-modal-video": "^2.0.2",
     "react-odometerjs": "^3.1.3",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-popper": "^2.3.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.4.0",
     "react-select": "^5.10.1",
