--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.3.1",
     "aos": "^2.3.4",
+    "apexcharts": "^5.3.5",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
@@ -25,6 +26,7 @@
     "i18next-http-backend": "^3.0.2",
     "lottie-react": "^2.4.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.7.0",
     "react-awesome-stars-rating": "^0.16.2",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
