--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-http-backend": "^3.0.2",
+    "jodit-react": "^5.2.38",
     "lottie-react": "^2.4.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.7.0",
