--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-apexcharts": "^1.7.0",
     "react-awesome-stars-rating": "^0.16.2",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
