--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-popper": "^2.3.0",
     "react-redux": "^9.2.0",
+    "react-responsive-masonry": "^2.7.1",
     "react-router": "^7.4.0",
     "react-select": "^5.10.1",
     "react-signature-canvas": "^1.1.0-alpha.2",
