--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@leenguyen/react-flip-clock-countdown": "^1.7.2",
     "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^2.6.1",
     "@stripe/react-stripe-js": "^3.7.0",
