--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "firebase": "^11.7.1",
     "framer-motion": "^12.6.2",
     "hijri-converter": "^1.1.1",
+    "html2canvas": "^1.4.1",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-http-backend": "^3.0.2",
     "jodit-react": "^5.2.38",
+    "jspdf": "^4.0.0",
     "lottie-react": "^2.4.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.7.0",
